# exif-turbo

./: .gitignore  README.md  THIRD-PARTY-LICENSES.md  exif-turbo-macos.spec  exif-turbo.spec  project-spec.md  pyproject.toml  requirements.txt  setup.ps1  version_info.py
.github/: copilot-instructions.md
.github/agents/: code-reviewer.agent.md  documentation.agent.md  senior-python-engineer.md
.github/prompts/: rebuild-docs.prompt.md  release.prompt.md  update-user-manual.prompt.md
assets/: icon.icns
docs/: user-manual.md
installer/: exif-turbo.wxs
scripts/: build_macos.sh  build_windows.ps1  export_manual_pdf.py  populate_translations.py  regenerate_translations.py  tag_release.ps1  take_screenshots.py
src/exif_turbo/: __init__.py  app.py  config.py  db.py  index.py  indexer.py
src/exif_turbo/data/: image_index_repository.py  indexed_folder_repository.py
src/exif_turbo/i18n/: __init__.py  translator.py
src/exif_turbo/indexing/: cli.py  exif_metadata_extractor.py  image_finder.py  image_utils.py  indexer_service.py  metadata_extractor.py
src/exif_turbo/models/: indexed_folder.py  indexed_image.py  search_result.py
src/exif_turbo/ui/: app_main.py  gettext_translator.py  main_window.py
src/exif_turbo/ui/models/: exif_list_model.py  exif_table_model.py  folder_list_model.py  search_list_model.py  search_model.py  settings_model.py
src/exif_turbo/ui/providers/: preview_image_provider.py  (+1 more)
src/exif_turbo/utils/: thumb_cache.py
tests/: conftest.py
tests/data/: test_excluded_paths.py  test_image_index_repository.py  test_indexed_folder_repository.py
tests/indexing/: test_image_utils.py  test_indexer_service.py  test_metadata_to_text.py
tests/ui/: conftest.py  test_app_controller.py  test_ext_filter.py  test_ext_filter_real_db.py  test_ext_filter_real_db_e2e.py  test_folder_management.py  test_thumbnail_loading.py  test_zoom_anchor.py
(+11 files in other folders)
