[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exif-turbo"
version = "0.1.0"
description = "Fast EXIF full-text search with a PySide6 UI"
requires-python = ">=3.9"
dependencies = [
  "PySide6>=6.5",
  "Pillow>=10.0",
]

[project.scripts]
exif-turbo-index = "exif_turbo.index:main"
exif-turbo = "exif_turbo.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
