[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exif-turbo"
version = "1.0.2"
description = "Fast EXIF full-text search with a PySide6 UI"
requires-python = ">=3.9"
dependencies = [
  "PySide6>=6.5",
  "Pillow>=10.0",
  "rawpy>=0.18",
  "sqlcipher3>=0.5",
]

[project.scripts]
exif-turbo = "exif_turbo.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
exif_turbo = ["i18n/locales/**/*.mo", "i18n/locales/**/*.po"]
